# m4.2_middleware_harvester

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.agents/skills/arctrl/: SKILL.md
.agents/skills/config-wrapper/: SKILL.md
.agents/skills/create-specifica-feature/: SKILL.md
.devcontainer/: Dockerfile
.devcontainer/antigravity/: devcontainer.json
.devcontainer/cursor/: README.md  devcontainer.json
.devcontainer/vscode/: devcontainer-lock.json  devcontainer.json
.github/agents/: refactoring.agent.md  spec-to-code.agent.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  feature-pull-request.yml  feature-release.yml  helm-pre-release.yml  helm-release.yml  pre-release.yml  release.yml  reusable-build.yml  reusable-check.yml  reusable-code-quality.yml  reusable-release.yml
dev_environment/: README.edal-pgp.md  README.md  client.crt  client.key  compose.demo.yaml  compose.edal-pgp.yaml  compose.yaml  config.demo.yaml  config.edal-pgp.yaml  config.local.yaml  config.yaml  demo_api_main.py  start.sh
docker/: Dockerfile.harvester  Dockerfile.inspire  Dockerfile.inspire_to_arc
docker/container-structure-tests/: harvester.yaml  inspire.yaml
docs/: README.md  ai_workflow.md  architecture.puml  code_review_backlog.md  github_workflows.wsd  harvester_workflow.puml  inspire_mapping.md  mapping.md  schema_org_mapping.md  schema_org_rdi_mapping.md
helm/harvester/: .helmignore  Chart.yaml  values.yaml
helm/harvester/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml  serviceaccount.yaml
middleware/harvester/: README.md  pyproject.toml
middleware/harvester/spec/configuration/: design.md  spec.md
middleware/harvester/spec/harvest-report/: design.md  spec.md
middleware/harvester/spec/harvester-orchestration/: design.md  spec.md
middleware/harvester/spec/liveness-probe/: design.md  spec.md
middleware/harvester/spec/otlp-observability/: design.md  spec.md
middleware/harvester/src/middleware/harvester/: __init__.py  config.py  errors.py  healthcheck.py  main.py  nice_http_client.py  plugin_base.py  plugin_config.py  report.py
middleware/harvester/tests/: __init__.py
middleware/harvester/tests/unit/: __init__.py  test_config.py  test_config_schema_org.py  test_main.py  test_nice_http_client.py
middleware/inspire/: README.md  config_sample.yaml  pyproject.toml
middleware/inspire/spec/csw-harvesting/: design.md  spec.md
middleware/inspire/spec/csw-retry/: design.md  spec.md
middleware/inspire/spec/csw-threadpool/: design.md  spec.md
middleware/inspire/spec/inspire-to-arc-mapping/: design.md  spec.md
middleware/inspire/spec/workflow-execution/: design.md  spec.md
middleware/inspire/src/middleware/inspire/: __init__.py  config.py  csw_client.py  errors.py  iso_parser.py  mapper.py  models.py  plugin.py
middleware/inspire/tests/integration/: conftest.py  test_harvester_integration.py
middleware/inspire/tests/unit/: test_csw_client.py  test_harvester.py  test_harvester_comprehensive.py  test_mapper_comprehensive.py  test_plugin.py
middleware/inspire_to_arc/: config_sample.yaml  pyproject.toml
middleware/inspire_to_arc/spec/api-upload/: spec.md
middleware/inspire_to_arc/spec/csw-harvesting/: spec.md
middleware/inspire_to_arc/spec/inspire-to-arc-mapping/: design.md  spec.md
middleware/inspire_to_arc/spec/workflow-execution/: design.md  spec.md
middleware/schema_org/: README.md  pyproject.toml
middleware/schema_org/spec/constitution/: mission.md  roadmap.md  tech-stack.md
middleware/schema_org/spec/edal-pgp-deployment/: design.md  spec.md
middleware/schema_org/spec/edal-pgp-mapping/: design.md  spec.md
middleware/schema_org/spec/html-jsonld-dataset/: design.md  spec.md
middleware/schema_org/spec/schema-org-harvesting/: design.md  spec.md
middleware/schema_org/spec/schema-org-to-arc-mapping/: design.md  spec.md
middleware/schema_org/spec/schemaorg-dataset-abstraction/: design.md  spec.md
middleware/schema_org/spec/schemaorg-mapper/: design.md  edal-mapping.md  spec.md
middleware/schema_org/spec/sitemap-mycore-solr/: design.md  spec.md
middleware/schema_org/spec/xml-sitemap-parser/: design.md  spec.md
middleware/schema_org/src/middleware/schema_org/: __init__.py  config.py  dataset.py  errors.py  html_jsonld_dataset.py  interfaces.py  mapper.py  models.py  plugin.py  registry.py  schema_org_mapper.py  sitemap.py
middleware/schema_org/src/middleware/schema_org/dataset/: __init__.py  dataset.py  html_jsonld.py
middleware/schema_org/src/middleware/schema_org/schema_org_mapper/: __init__.py  edal.py  edal_pgp.py  general.py  schema_org_mapper.py
middleware/schema_org/src/middleware/schema_org/sitemap/: __init__.py  mycore_solr.py  sitemap.py  xml.py
middleware/schema_org/tests/fixtures/: edal_pgp_doi_2011_0.html  edal_pgp_doi_2016_0.html  edal_pgp_rocrate_2011_0.json  edal_pgp_sample.json  sitemap_doi_ipk_gatersleben.xml
middleware/schema_org/tests/integration/: __init__.py  test_edal_pgp_integration.py  test_edal_pgp_live.py
middleware/schema_org/tests/unit/: test_config.py  test_dataset_html_jsonld.py  test_edal_pgp_mapper.py  test_fakes.py  test_interfaces.py  test_mapper.py  test_mapper_edal.py  test_nice_http_client.py  test_registry.py  test_schema_org_mapper.py  test_schema_org_plugin.py  test_schema_org_plugin_methods.py  test_sitemap.py
scripts/: fix-docker-credentials.sh  import-public-gpg-keys.sh  install-dev-hooks.sh  load-env.sh  quality-check.sh  run-container-structure-test.sh  run-mypy.sh  setup-container-gpg.sh  setup-git-lfs.sh  start-devcontainer-cursor.sh  update-apk-dependencies.sh  uv-sync-dev.sh
scripts/git-hooks/: pre-push
spec/: principles.md
spec/async-concurrency/: design.md  spec.md
spec/configuration/: design.md  spec.md
spec/demo-environment/: spec.md
spec/error-handling/: design.md  spec.md
spec/nice-http-client/: design.md  spec.md
spec/otlp-observability/: design.md  spec.md
spec/skipped-datasets/: design.md  spec.md
(+8 files in other folders)
