[project]
name = "m4.2_middleware_harvester"
dynamic = ["version"]
description = "The FAIRagro Middleware Harvester"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "inspire",
  "harvester",
  "schema_org",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pylint>=4.0.4",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pytest-mock>=3.10.0",
  "mypy>=1.20.1",
  "bandit>=1.7.0",
  "ruff>=0.15.11",
  "pre-commit>=4.0.0",
  "respx>=0.23.1",
]

[tool.uv.sources]
inspire = { workspace = true }
harvester = { workspace = true }
schema_org = { workspace = true }

[tool.uv.workspace]
members = [
    "middleware/inspire",
    "middleware/harvester",
    "middleware/schema_org",
]

[tool.ruff]
# Exclude directories from linting and formatting
exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  "*.egg-info",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "dev_environment",
  "build",
  "dist",
  "py.typed"
]

# Welche Regel-Sets aktiviert sind:
lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "C90", # mccabe (Komplexität)
  "N",   # pep8-naming
  "D",   # pydocstyle (Docstrings)
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # flake8-simplify
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "BLE", # flake8-blind-except (fängt zu generische Exceptions ab)
  "PLR", # Pylint Refactor (inkl. complexity rules wie too-many-return-statements)
  "SLF", # flake8-self (Private member access)
]

# Maximale Zeilenlänge wie in pylint (Standard: 100)
line-length = 120

# Formatierungs-Einstellungen (konsistent mit Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Für cyclomatic complexity, entspricht pylint's R1260 etc.
[tool.ruff.lint.mccabe]
max-complexity = 10

# Import sorting (replaces isort)
[tool.ruff.lint.isort]
known-first-party = ["middleware"]
force-single-line = false
combine-as-imports = true

# Per-file-ignores for test directories
[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D103"]  # missing-function-docstring in test files

# Black and isort replaced by ruff format - configurations removed to avoid conflicts

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
namespace_packages = true
mypy_path = [
  "middleware/inspire/src",
  "middleware/harvester/src",
  "middleware/schema_org/src",
]

# Exclude directories from type checking
exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  "dev_environment",
]

[[tool.mypy.overrides]]
module = "owslib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "arctrl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "arctrl"
ignore_missing_imports = true

# Docstring-Regeln aktivieren, damit es wie pylint C0114/15/16 meckert
[tool.ruff.lint.pydocstyle]
convention = "pep257" # oder "numpy", oder "google"

[tool.pytest.ini_options]
# Test discovery
testpaths = [
    "middleware/inspire/tests",
    "middleware/harvester/tests",
    "middleware/schema_org/tests"
]
pythonpath = [
    "middleware/inspire/src",
    "middleware/harvester/src",
    "middleware/schema_org/src"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output and behavior
addopts = [
    "-v",                        # Verbose output
    "--strict-markers",          # Treat unregistered markers as errors
    "--tb=short",                # Shorter traceback format
]
# NOTE: Coverage flags (--cov, --cov-fail-under) are intentionally NOT in addopts.
# Running them for every single test in VS Code would show falsely low coverage.
# Use: uv run pytest --cov=middleware --cov-report=term-missing --cov-fail-under=80

# Asyncio mode
asyncio_mode = "auto"

# Custom markers
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    # rdflib's JSON-LD parser internally uses ConjunctiveGraph; this is a
    # third-party issue and cannot be fixed in application code.
    "ignore::DeprecationWarning:rdflib",
]

[tool.coverage.run]
# Coverage measurement settings
source = [
    "middleware/inspire/src/middleware/inspire",
    "middleware/harvester/src/middleware/harvester",
    "middleware/schema_org/src/middleware/schema_org"
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/.pytest_cache/*",
    "*/build/*",
    "*/dist/*",
    "*/*.egg-info/*",
]
branch = true  # Measure branch coverage

[tool.coverage.report]
# Coverage reporting settings
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
# Ignore directories
ignore = [".venv", "venv", ".git", "__pycache__", "build", "dist"]
ignore-patterns = ["^\\..*", ".*\\.egg-info"]
# Fail if the score is below 8.0
fail-under = 8.0

[tool.pylint.messages_control]
# Disable checks that are already covered by ruff
disable = [
    # Docstring checks (covered by ruff pydocstyle D-series)
    "C0114",  # missing-module-docstring -> ruff D100
    "C0115",  # missing-class-docstring -> ruff D101
    "C0116",  # missing-function-docstring -> ruff D103

    # Import checks (covered by ruff pyflakes F, isort I)
    "C0411",  # wrong-import-order -> ruff I001
    "C0412",  # ungrouped-imports -> ruff I001
    "C0413",  # wrong-import-position -> ruff E402
    "W0611",  # unused-import -> ruff F401
    "W0614",  # unused-wildcard-import -> ruff F403, F405

    # Code style checks (covered by ruff pycodestyle E/W)
    "C0303",  # trailing-whitespace -> ruff W291
    "C0304",  # missing-final-newline -> ruff W292
    "C0305",  # trailing-newlines -> ruff W391
    "C0321",  # multiple-statements -> ruff E701, E702
    "C0325",  # superfluous-parens -> ruff UP034
    "W0311",  # bad-indentation -> ruff E111, E117
    "W0301",  # unnecessary-semicolon -> ruff E703

    # Naming checks (covered by ruff pep8-naming N-series)
    "C0103",  # invalid-name -> ruff N801-N807

    # Complexity checks (covered by ruff mccabe C90)
    "R0912",  # too-many-branches -> ruff C901
    "R0915",  # too-many-statements -> ruff C901

    # Bugbear/pyflakes checks (covered by ruff bugbear B, pyflakes F)
    "W0101",  # unreachable -> ruff F401
    "W0102",  # dangerous-default-value -> ruff B006
    "W0107",  # unnecessary-pass -> ruff PIE790
    "W0125",  # using-constant-test -> ruff B015
    "W0511",  # TODO comment found
    "W0612",  # unused-variable -> ruff F841
    "W0613",  # unused-argument -> ruff ARG001-005
    "W0621",  # redefined-outer-name -> ruff F811
    "W0622",  # redefined-builtin -> ruff A001-A003

    # Simplification checks (covered by ruff flake8-simplify SIM)
    "R1705",  # no-else-return -> ruff SIM103
    "R1714",  # consider-using-in -> ruff SIM118
    "R1715",  # consider-using-get -> ruff SIM401
    "R1720",  # no-else-raise -> ruff SIM102
    "R1724",  # no-else-continue -> ruff SIM114
    "R1728",  # consider-using-generator -> ruff C417

    # Pyupgrade checks (covered by ruff pyupgrade UP)
    "R1711",  # useless-return -> ruff UP034
    "C0206",  # consider-using-dict-items -> ruff UP015

    # Additional opinionated/style checks often handled by formatters
    "R0903",  # too-few-public-methods (opinionated, often not relevant)
    "R0913",  # too-many-arguments (opinionated, case-by-case basis)
    "R0917",  # too-many-positional-arguments (handled by ruff PLR0917)
    "C0301",  # line-too-long (handled by ruff formatter)
    "R0801",  # duplicate-code (can be noisy in tests)
    "R0914",  # too-many-locals (handled by ruff PLR0914)

    # Exception checks (covered by ruff BLE001)
    "W0718",  # broad-exception-caught
    "W0703",  # broad-except

    # Private member access
    "W0212",  # protected-access
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
include = ["README.md"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
