[project]
name = "harvester"
version = "0.1.0"
description = "Core orchestrator for FAIRagro Middleware Harvester"
requires-python = ">=3.12"
dependencies = [
    "arctrl>=3.0.0b0",
    "pydantic>=2.0.0",
    "api_client",
    "shared",
    "inspire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
