[project]
name = "inspire"
version = "0.1.0"
description = "Harvester for INSPIRE metadata to ARC conversion"
requires-python = ">=3.12"
dependencies = [
    "owslib>=0.31.0",
    "arctrl>=3.0.0b0",
    "pydantic>=2.0.0",
    "fairagro-middleware-api-client==8.6.4.dev7",
    "fairagro-middleware-shared==8.6.4.dev7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
