[project]
name = "schema_org"
version = "0.1.0"
description = "Schema.org harvester plugin for FAIRagro Middleware Harvester"
requires-python = ">=3.12"
dependencies = [
    "arctrl>=3.0.0b0",
    "defusedxml>=0.7.1",
    "pydantic>=2.0.0",
    "rdflib>=7.0.0",
    "fairagro-middleware-shared>=8.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
